--- a/host-programs/package.json
+++ b/host-programs/package.json
@@ -5,7 +5,8 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.32.1"
+    "@coral-xyz/anchor": "^0.32.1",
+    "@noble/hashes": "^1.8.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
