--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "indexer:standalone": "tsx scripts/run-indexer.ts",
+    "indexer:dev:watch": "tsx watch scripts/run-indexer.ts"
   },
   "displayName": "Gill Boilerplate",
   "description": "Next.js, Tailwind, gill (based on @solana/kit), Wallet UI",
@@ -24,12 +26,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@solana-mobile/wallet-standard-mobile": "^0.4.1",
+    "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.89.0",
     "@wallet-ui/react": "2.0.0",
     "@wallet-ui/react-gill": "2.0.0",
@@ -58,6 +62,7 @@
     "eslint-config-next": "15.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "ws": "^8.18.3"
   }
