refactor(indexer): reorganize code structure for better maintainability

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "dotenv": "^17.2.3",
     "eslint": "^9.35.0",
     "eslint-config-next": "15.5.6",
     "prettier": "^3.6.2",
