--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "start": "next start",
     "indexer:standalone": "tsx scripts/run-indexer.ts",
-    "indexer:dev:watch": "tsx watch scripts/run-indexer.ts"
+    "indexer:dev:watch": "tsx watch scripts/run-indexer.ts",
+    "redis:worker": "tsx scripts/redis-worker.ts",
+    "redis:worker:watch": "tsx watch scripts/redis-worker.ts"
   },
   "displayName": "Gill Boilerplate",
   "description": "Next.js, Tailwind, gill (based on @solana/kit), Wallet UI",
@@ -41,9 +43,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gill": "0.11.0",
+    "ioredis": "^5.8.2",
     "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
