feat: implement Host Programs Solana Actions API
- Add 4 Actions API routes for Host Programs
  * register_input_handle: Register input handles for FHE16 operations
  * request_unary_op: Unary operations (NOT, ABS, NEG)
  * request_binary_op: Binary operations (ADD, SUB, AND, OR, etc.)
  * request_ternary_op: Ternary operations (ADD3, EQ3, MAJ3, XOR3, SELECT)

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@solana-mobile/wallet-standard-mobile": "^0.4.1",
+    "@solana/actions": "^1.6.6",
     "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.89.0",
     "@wallet-ui/react": "2.0.0",
