--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "indexer:standalone": "tsx scripts/run-indexer.ts",
     "indexer:dev:watch": "tsx watch scripts/run-indexer.ts",
     "redis:worker": "tsx scripts/redis-worker.ts",
-    "redis:worker:watch": "tsx watch scripts/redis-worker.ts"
+    "redis:worker:watch": "tsx watch scripts/redis-worker.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "displayName": "Gill Boilerplate",
   "description": "Next.js, Tailwind, gill (based on @solana/kit), Wallet UI",
@@ -29,6 +33,7 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -49,6 +54,7 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.7",
     "next-themes": "^0.4.6",
+    "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
