feat: add Blink (Solana Actions) support
- Add @dialectlabs/blinks package dependency
- Configure CORS headers in next.config.ts for Actions API endpoints
- Update all action API routes to support Blink protocol:
  - register_input_handle
  - request_binary_op
  - request_ternary_op
  - request_unary_op
- Add Blink adapter for wallet integration
- Add Blink component for rendering Blinks
- Add Blink test page at /blink
- Add actions.json route for Blink discovery

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
+    "@dialectlabs/blinks": "^0.22.5",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
