feat: implement real-time event system with Redis Pub/Sub and SSE
- Add Redis Pub/Sub client, SSE endpoint, and useEventSubscription hook with auto-reconnect
- Integrate event publishing into Indexer and add EventMonitor component for real-time monitoring

--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
     "build": "next build",
     "ci": "npm run build && npm run lint && npm run format:check",
     "dev": "next dev --turbopack",
+    "dev:debug": "LOG_LEVEL=debug next dev --turbopack",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start",
     "indexer:standalone": "tsx scripts/run-indexer.ts",
+    "indexer:standalone:debug": "LOG_LEVEL=debug tsx scripts/run-indexer.ts",
     "indexer:dev:watch": "tsx watch scripts/run-indexer.ts",
+    "indexer:dev:watch:debug": "LOG_LEVEL=debug tsx watch scripts/run-indexer.ts",
+    "indexer:debug": "node --inspect-brk -r tsx scripts/run-indexer.ts",
     "redis:worker": "tsx scripts/redis-worker.ts",
     "redis:worker:watch": "tsx watch scripts/redis-worker.ts",
+    "test:pubsub": "tsx scripts/test-pubsub.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -62,7 +67,8 @@
     "react-error-boundary": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.3.8",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
