--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gill": "0.11.0",
+    "idb-keyval": "^6.2.2",
+    "immer": "^11.0.1",
     "ioredis": "^5.8.2",
     "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
@@ -68,6 +70,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
+    "zundo": "^2.3.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
